# cedar

./: .gitignore  CMakeLists.txt  cedar.cbp  doxygen.cfg
include/cedar/: Button.h  Button.hpp  Camera.h  Camera.hpp  Cedar.h  Cedar.hpp  Config.h  Config.hpp  Distance2D.h  Distance2D.hpp  Element.h  Element.hpp  EngineThread.h  EngineThread.hpp  Entity.h  Entity.hpp  EntityManager.h  EntityManager.hpp  Font.h  Font.hpp  FontRegistry.h  FontRegistry.hpp  FreeTypeFont.hpp  FrustumRayBuilder.h  FrustumRayBuilder.hpp  GLConstants.h  GLConstants.hpp  GUIConstants.h  GUIConstants.hpp  Glyph.h  Glyph.hpp  GlyphData.h  GlyphData.hpp  GuiRenderer.h  Image.hpp  ImageButton.hpp  ImageLoader.hpp  Input.h  InputHandler.h  InputHandler.hpp  (+82 more)
src/core/: Cedar.cpp  Config.cpp  XException.cpp
src/entity/: Entity.cpp  EntityManager.cpp
src/entity/camera/: Camera.cpp
src/graphics/font/: Font.cpp  FontRegistry.cpp  FreeTypeFont.cpp  Glyph.cpp  GlyphData.cpp  PTFFont.cpp
src/graphics/gui/: Screen.cpp  ScreenRegistry.cpp
src/graphics/gui/elements/: Button.cpp  Element.cpp  Image.cpp  ImageButton.cpp  Label.cpp
src/graphics/model/: Model.cpp  ModelRegistry.cpp  Quad.cpp  TextBuffer.cpp
src/graphics/renderer/: GuiRenderer.cpp  MasterRenderer.cpp  Renderer.cpp  Renderer2D.cpp
src/graphics/shader/: ShaderProgram.cpp
src/graphics/texture/: ImageLoader.cpp  Texture.cpp  Texture2D.cpp  TextureRegistry.cpp
src/graphics/window/: Window.cpp
src/input/: InputHandler.cpp
src/logging/: Logger.cpp  LoggerFactory.cpp  QueueLogAppender.cpp
src/math/: FrustumRayBuilder.cpp  Matrix4f.cpp  OpenSimplexNoise.cpp  Quaternionf.cpp  Vector2d.cpp  Vector2f.cpp  Vector2i.cpp  Vector2ui.cpp  Vector3f.cpp  Vector4f.cpp  Vector4ui.cpp
src/math/collision/: MeshCollider2D.cpp
src/multithreading/: Thread.cpp
src/scene/: Scene.cpp
src/thread/: EngineThread.cpp  InputThread.cpp  OpenGLThread.cpp  Thread.cpp
src/utils/: XException.cpp
stb/include/: stb_image_resize.h
tests/: Assert.h
